2-commit: Update model files, add new .joblib models, and remove old data files

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,13 @@ venv/
 __pycache__/
 *.pyc
 
-# Model files 
-*.joblib
-*.pkl
+
 
 # Mac system file
 .DS_Store
+# Ignore unnecessary files
+*.zip
+*.rar
+*.tar.gz
+*.7z
+
